--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,31 @@
 {
   "name": "spothero-demo",
   "dependencies": {
-    "ember": "1.13.7",
-    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
-    "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
-    "ember-data": "1.13.8",
+    "ember": "2.3.0",
+    "ember-cli-shims": "ember-cli/ember-cli-shims#0.1.0",
+    "ember-cli-test-loader": "0.2.1",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.5",
     "ember-qunit": "0.4.9",
-    "ember-qunit-notifications": "0.0.7",
+    "ember-qunit-notifications": "0.1.0",
     "ember-resolver": "~0.1.18",
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.2.1",
-    "qunit": "~1.18.0"
+    "qunit": "~1.20.0",
+    "es5-shim": "^4.0.5",
+    "pretender": "~0.10.1",
+    "lodash": "~3.7.0",
+    "bootstrap": "~3.3.5",
+    "dcjs": "1.7.5",
+    "firebase": "^2.1.0",
+    "leaflet": "~0.7.7",
+    "leaflet.markercluster": "~0.4.0-hotfix.1",
+    "gmaps-for-apps": "~0.5.9"
+  },
+  "resolutions": {
+    "qunit-notifications": "~0.1.0",
+    "ember": "2.3.0"
+  },
+  "devDependencies": {
+    "reductio": "~0.5.3"
   }
 }
