--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spothero-demo",
   "version": "0.0.0",
-  "description": "Small description for spothero-demo goes here",
+  "description": "Small description for pareto-skills goes here",
   "private": true,
   "directories": {
     "doc": "doc",
@@ -20,21 +20,35 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.1.2",
+    "ember-browserify": "^1.1.7",
     "ember-cli": "1.13.8",
     "ember-cli-app-version": "0.5.0",
     "ember-cli-babel": "^5.1.3",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.1",
+    "ember-cli-g-maps": "0.3.3",
     "ember-cli-htmlbars": "0.7.9",
     "ember-cli-htmlbars-inline-precompile": "^0.2.0",
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-json-module": "0.0.2",
+    "ember-cli-moment-shim": "1.0.0",
     "ember-cli-qunit": "^1.0.0",
     "ember-cli-release": "0.2.3",
     "ember-cli-sri": "^1.0.3",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "1.13.8",
+    "ember-data": "2.3.0",
     "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.3"
+    "ember-export-application-global": "^1.0.3",
+    "ember-leaflet": "2.1.2",
+    "ember-leaflet-marker-cluster": "0.0.2",
+    "ember-moment": "6.0.0",
+    "emberfire": "1.6.5",
+    "gps2zip": "^2.1.0",
+    "moment": "2.11.2",
+    "moment-timezone": "0.5.0"
+  },
+  "dependencies": {
+    "dc": "1.7.5"
   }
 }
