--- a/bower.json
+++ b/bower.json
@@ -13,9 +13,7 @@
     "es5-shim": "^4.0.5",
     "pretender": "~0.10.1",
     "lodash": "~3.7.0",
-    "bootstrap": "~3.3.5",
-    "dcjs": "1.7.5",
-    "firebase": "^2.1.0"
+    "dcjs": "1.7.5"
   },
   "resolutions": {
     "qunit-notifications": "~0.1.0",
